# derive_destructure

./: Cargo.toml  LICENSE  README.md  README.tpl
src/: lib.rs
tests/: droptest.rs  enum.rs  generic.rs  simple.rs  unit.rs
