[package]
name = "derive_destructure"
version = "1.0.0"
authors = ["Michiel De Muynck <michieldemuynck@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Destructure structs that implement Drop"
repository = "https://github.com/Migi/derive_destructure"
keywords = ["derive", "destructure", "drop", "E0509", "remove_trait_impls"]
readme = "README.md"

[badges]
travis-ci = { repository = "Migi/derive_destructure" }

[lib]
name = "derive_destructure"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = "1"
quote = "1"
